# MIL-STD-1553_BM_GUI

./: CMakeLists.txt
scripts/: build.sh  run.sh
src/: bm.cpp  bm.hpp  common.hpp  main.cpp
ui/: app-window.slint  globals.slint  rt-sa-grid.slint  rt-sa-list.slint
